# FastFeed

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  frontend.py  main.py  pyproject.toml
src/: app.py  db.py  dependencies.py  images.py  schemas.py  users.py
src/core/: __init__.py  config.py  database.py  imagekit.py
src/models/: __init__.py  comment.py  comment_like.py  like.py  post.py  user.py
src/routers/: __init__.py  auth.py  comments.py  posts.py
src/schemas/: __init__.py  comment.py  post.py  user.py
src/utils/: __init__.py  media.py
tests/: conftest.py  test_app.py  test_likes.py
tests/utils/: test_media.py
