[project]
name = "fastfeed"
version = "0.1.0"
description = "A production-ready social media backend built with FastAPI"
authors = [
    { name = "PedroHRMaschio", email = "pedrohenriquermaschio@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.14"
keywords = ["fastapi", "social-media", "backend", "python", "async"]
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.123.0",
    "fastapi-users[sqlalchemy]>=15.0.1",
    "imagekitio>=4.2.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.2",
    "uvicorn[standard]>=0.38.0",
]
