[project]
name = "fastfeed"
version = "0.1.0"
description = "A production-ready social media backend built with FastAPI"
authors = [
    { name = "PedroHRMaschio", email = "pedrohenriquermaschio@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.14"
keywords = ["fastapi", "social-media", "backend", "python", "async"]
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.123.0",
    "fastapi-users[sqlalchemy]>=15.0.1",
    "imagekitio>=4.2.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.2",
    "uvicorn[standard]>=0.38.0",
    "playwright>=1.57.0",
]

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--cov=src --cov-report=term-missing"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
omit = [
    "tests/*",
    "src/core/database.py",  # Often difficult to test connectivity heavily in unit tests
    "src/core/config.py",    # Just variable assignments
    "src/core/imagekit.py",  # Just client instantiation
    "**/__init__.py",        # Just exports
    "src/dependencies.py",   # Wiring, no logic
    "src/schemas/*",         # Pydantic models (declarative)
]


[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
